--- a/reports.html
+++ b/reports.html
@@ -47,10 +47,36 @@
             </ul>
           </div>        
         </div>
-        <div class = "col-md-9 hold-height">           
+        <div class = "col-md-9 hold-height">
+          <h1>Generate Reports</h1>
+          <div id = "table_div" class = "top-pad">
+            <table id = "reports_table" class="table table-striped pop">
+              <thead>
+                <tr>
+                  <th scope="col">Report Name</th>
+                  <th scope="col">Report Description</th>
+                  <th scope="col">Report Format</th>
+                  <th scope = "col">Download</th>
+                </tr>
+              </thead>
+              <tbody id = "reports-table-tbody">
+                <tr>
+                  <td>
+                  </td>
+                  <td>
+                    Coming Soon!
+                  </td>
+                  <td>
+                  </td>
+                  <td>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>            
         </div>
       </div>
     </div>
-    <!-- <script src = "js/indexFunctions.js"></script> -->
+    <!-- <script src = "js/reportsFunctions.js"></script> -->
   </body>
 </html>
